syntax = "proto3";
package zukte;

message ApplicationUserDeleteRequest {
  string id = 1;
}
