syntax = "proto3";
package Zukte.Message.ApplicationUser;

import "protobuf/application_user/application_user_list_request.proto";
import "protobuf/application_user/application_user_delete_request.proto";
import "google/protobuf/empty.proto";

service ApplicationUserService {
  rpc GetList(ApplicationUserListRequest)
      returns (ApplicationUserListRequest.ApplicationUserListResponse) {}

  rpc Delete(ApplicationUserDeleteRequest)
      returns (google.protobuf.Empty) {}
}
